# tracy

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tasks.py
.codex/: setup.sh
.github/workflows/: ci.yml  pr-review.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_passkey_auth.py  0003_add_days_off.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  routes.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  auth_session.py  day_off.py  passkey.py  preferences.py  user.py  work_entry.py
app/schemas/: time_tracking.py
app/services/: __init__.py  auth_sessions.py  german_holidays.py  passkey_repository.py  statistics.py  time_calculation.py
app/web/: __init__.py  routes.py
app/web/static/: app.css  app.js  app.test.js
app/web/templates/: auth_base.html  capabilities.html  index.html  login.html  security.html
deploy/webhooker/: README.md  compose.production.yml  compose.review.yml
deploy/webhooker/config/: tracy-production.yaml  tracy-review.yaml
deploy/webhooker/env/: production.common.env  review.common.env
docs/deployment/: docker-compose.md  webhooker.md
scripts/: run_passkey_e2e.mjs
tests/: conftest.py  test_api.py  test_auth.py  test_deployment.py  test_holidays.py  test_migrations.py  test_statistics.py  test_tasks.py  test_time_calculation.py
