[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracy"
dynamic = ["version"]
description = "Self-hostable working-time tracker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "greenlet>=3.1.1",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "jinja2>=3.1.4",
  "itsdangerous>=2.2.0",
  "fastpasskey @ https://github.com/Malaber/python-libs/releases/download/fastpasskey-v0.2.3/fastpasskey-0.2.3-py3-none-any.whl#sha256=084da97958f036f7686d247d3ef7ed75b3b0aefd5218a3bfd3bdc8955a177e9f",
]

[project.optional-dependencies]
dev = [
  "invoke>=2.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "black==25.12.0",
  "flake8>=7.1.0",
]

[tool.setuptools_scm]
fallback_version = "0.1.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv"]
